--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -7,6 +7,10 @@ body {
 
 :root {
   --font-color: white;
-  --font-size: 1rem;
+  --font-size: 1.2rem;
   --font-family: 'Times New Roman', Times, serif;
+
+  --brown: #af6540;
+  --light-brown: #c27148;
+  --dark-brown: #8e4e2e;
 }
