--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -9,8 +9,10 @@ body {
   --font-color: white;
   --font-size: 1.2rem;
   --font-family: 'Times New Roman', Times, serif;
+  --prompt-font: 'Courier New', Courier, monospace;
 
   --brown: #af6540;
   --light-brown: #c27148;
   --dark-brown: #8e4e2e;
+  --prompt-background: #130a08;
 }
