--- a/packages/client/src/components/background/Background.module.css
+++ b/packages/client/src/components/background/Background.module.css
@@ -4,6 +4,22 @@
   left: 0;
   width: 100%;
   height: 100%;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.fadeIn {
+  animation: fadeIn 3s steps(15) forwards;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .loader {
@@ -12,4 +28,15 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
+}
+
+.error {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: red;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 1rem;
+  border-radius: 5px;
 }
