--- a/packages/client/src/App.module.css
+++ b/packages/client/src/App.module.css
@@ -19,3 +19,11 @@
   bottom: 0;
   left: 0;
 }
+
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
