--- a/packages/client/src/components/DOSPrompt/PromptLine.module.css
+++ b/packages/client/src/components/DOSPrompt/PromptLine.module.css
@@ -7,7 +7,7 @@
   width: 100%;
   background-color: transparent;
   color: var(--font-green-prompt);
-  font-size: var(--font-size);
+  font-size: var(--font-size-large);
   font-family: var(--default-font);
 }
 .user {
