--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -13,7 +13,8 @@ body {
 :root {
   --font-color: white;
   --font-green-prompt: #129b12;
-  --font-size: 1.2rem;
+  --font-size: 1rem;
+  --font-size-large: 1.2rem;
   --default-font: 'PressStart2P', sans-serif;
 
   --brown: #af6540;
